[project]
name = "jyparse"
version = "0.2.0"
description = "A JSON parser written in python"
authors = [
    {name = "BlackDandel10n",email = "blackdandel10n@proton.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.4.1,<9.0.0)"
]

[tool.poetry]
packages = [{include = "jyparse", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
